// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form for failed state for resetting password 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  width: 100%;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Create a New Password
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 2 of 3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      kind="danger"
      width="100%"
    >
      failed to reset password
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        New Password
      </label>
      <input
        autocomplete="off"
        class="c7"
        color="text.onLight"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <div
      class="c5"
    >
      <label
        class="c6"
        font-size="0"
      >
        Confirm New Password
      </label>
      <input
        autocomplete="off"
        class="c7"
        color="text.onLight"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </div>
    <button
      class="c8"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;

exports[`render correct form for resetting password 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #651FFF;
}

.c7:active {
  background: #354AA4;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 512px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c6::-ms-clear {
  display: none;
}

.c6::placeholder {
  opacity: 0.4;
}

.c6:read-only {
  cursor: not-allowed;
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

<form
  class="c0"
  width="512px"
>
  <div
    class="c1"
    color="light"
  >
    Create a New Password
  </div>
  <div
    class="c2"
    color="text.secondary"
  >
    Step 2 of 3
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        New Password
      </label>
      <input
        autocomplete="off"
        class="c6"
        color="text.onLight"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        Confirm New Password
      </label>
      <input
        autocomplete="off"
        class="c6"
        color="text.onLight"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </div>
    <button
      class="c7"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</form>
`;
